--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         // Loading textures
         const textureLoader = new THREE.TextureLoader();
-        const depthMap = textureLoader.load('path_to_your_depth_map.png');
-        const texture = textureLoader.load('path_to_your_texture.png');
+        const depthMap = textureLoader.load('depthmap_000001.png');
+        const texture = textureLoader.load('texture_000001.png');
 
         // Plane geometry for the mesh
         const geometry = new THREE.PlaneGeometry(5, 5, 256, 256);
